--- a/TODO.org
+++ b/TODO.org
@@ -1,2 +1,6 @@
 * TODO Think about a new lisp interface with unwind-protect and restart-cases
 * TODO Foreign library and initailization at runtime
+* TODO Haptic
+* TODO Touch Input
+* TODO Shader
+* TODO Video Streaming (Add the events and structs)
