--- a/TODO.org
+++ b/TODO.org
@@ -1,5 +1,5 @@
 * TODO Think about a new lisp interface with unwind-protect and restart-cases
-* TODO Foreign library and initailization at runtime
+* TODO Foreign library and initialization at runtime
 * TODO Haptic
 * TODO Touch Input
 * TODO Shader
