--- a/README.org
+++ b/README.org
@@ -29,7 +29,8 @@ libffi
  #+END_SRC
 6. I've got a neat OPTIONAl lispy interface [[https://github.com/resttime/cl-liballegro/tree/master/src/interface/interface.lisp][here]]
 7. Everything else is pretty much 1-to-1
-8. Examples exist if you get lost
+8. If you're getting crashes on MacOS, put all your code into [[https://common-lisp.net/project/cffi/manual/html_node/defcallback.html][callback]] and pass it to [[https://www.allegro.cc/manual/5/al_run_main][al:run-main]].
+9. Examples exist if you get lost
 
 *Feel free to raise an issue to request a feature or for me to work on something*
 
