--- a/README.org
+++ b/README.org
@@ -3,8 +3,8 @@
 * cl-liballegro
 Interface and bindings to the [[https://liballeg.org/][Allegro 5 game programming library]]
 
-Check out how the [[https://github.com/resttime/cl-liballegro/tree/master/src][bindings' source code]] is organized and compare it to
-the [[https://liballeg.org/a5docs/trunk/][API reference]].
+Check out how the [[./src][source code]] is organized and compare it to the [[https://liballeg.org/a5docs/trunk/][API
+reference]].
 
 * Requires
 [[https://sourceware.org/libffi/][libffi]]
@@ -12,8 +12,8 @@ the [[https://liballeg.org/a5docs/trunk/][API reference]].
 * Quickstart
 1. ~al_*~ becomes ~al:*~
 2. ~(al:rest secs)~ is ~(al:rest-time secs)~ because of symbol interference with #'cl:rest.
-3. Enums/constants are shortened, check [[https://github.com/resttime/cl-liballegro/tree/master/src/constants][constants]] if you need help finding them.
-4. Type names have changed too, check [[https://github.com/resttime/cl-liballegro/tree/master/src/types][types]] if you need help finding them.
+3. Enums/constants are shortened, check [[./src/constants][constants]] if you need help finding them.
+4. Type names have changed too, check [[./types][types]] if you need help finding them.
 5. To access slots from a C struct, you can use CFFI:MEM-REF create a plist
  #+BEGIN_SRC lisp
    (defcstruct display-mode
@@ -27,10 +27,10 @@ the [[https://liballeg.org/a5docs/trunk/][API reference]].
        (print plist)
        (print (getf plist 'width))))
  #+END_SRC
-6. I've got a neat *OPTIONAL* lispy interface [[https://github.com/resttime/cl-liballegro/tree/master/src/interface/interface.lisp][here]] which provides an entire fixed timestep game loop
+6. I've got a neat *OPTIONAL* [[./src/interface/interface.lisp][lispy interface]] which provides an entire fixed timestep game loop
 7. Everything else is pretty much 1-to-1
 8. If you're getting crashes on Mac OS X, put all your code into [[https://common-lisp.net/project/cffi/manual/html_node/defcallback.html][callback]] and pass it to [[https://www.allegro.cc/manual/5/al_run_main][al:run-main]].
-9. [[https://github.com/resttime/cl-liballegro/tree/master/examples][Examples]] exist if you get lost
+9. [[./examples][Examples]] exist if you get lost
 
 *Feel free to raise an issue to request a feature or for me to work on
 something*
@@ -59,8 +59,8 @@ Various projects I've found using cl-liballegro.  Feel free to add items onto th
 ** General
 [[https://user-images.githubusercontent.com/2598904/96662425-f3c4cf00-1313-11eb-9e59-807e27697c20.png]]
 
-The most basic usage is 1-to-1 just uses the bindings "as is", with an
-[[https://github.com/resttime/cl-liballegro/blob/master/examples/simple-window.lisp][example]]
+The most basic usage is 1-to-1 just uses the bindings "as is" with an
+[[./examples/001-simple-window.lisp][example]]
 
 Names have been changed to use a more lispy convention in which ~_~ is
 converted to ~-~
