--- a/CHANGELOG.org
+++ b/CHANGELOG.org
@@ -1,9 +1,12 @@
 * Changelog
+** 0.2.17
+- Add Allegro 5 Threads
+
 ** 0.2.16
 - Add projects to readme using cl-liballegro
 - Add changelog file to help devs keep track of changes
 - Fix return value of ~init-font-addon~
-- Implemented memory functionality
+- Add Allegro 5 Memory
 
 ** 0.2.15
 - Add audio event type
@@ -15,7 +18,7 @@
 - Fix ~run-system~ on OSX
 
 ** 0.2.11
-- Add Allegro 5 video addon
-- Add Allegro 5 filesystem
+- Add Allegro 5 Video addon
+- Add Allegro 5 Filesystem
 - Fix compatibility for OSX requiring GUI code in main thread
 - Fix variadic function definitions for ~al_draw_textf~ and ~al_draw_justified_textf~
